--- a/lastMinute/pom.xml
+++ b/lastMinute/pom.xml
@@ -13,10 +13,16 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cucumber.version>1.2.4</cucumber.version>
-    <java.version>8</java.version>
+    <java.version>8</java.version> 
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+	<dependency>
+	    <groupId>io.github.bonigarcia</groupId>
+	    <artifactId>webdrivermanager</artifactId>
+	    <version>1.4.8</version>
+	</dependency>
    
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
